# nova-test

./: .env.example  .eslintrc.js  .gitignore  API.md  DEPLOY.md  QUICKSTART.md  README.md  SECURITY.md  TESTING.md  USER_GUIDE.md  conftest.py  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.build.json  vitest.config.ts
executor-python/: .env.example  Dockerfile  README.md  pyproject.toml
executor-python/nova_executor/: __init__.py  app.py  config.py  graph.py  queue.py  sandbox.py  types.py
executor-python/nova_executor/adapters/: __init__.py  executor.py  hil_ticket.py  verifier.py  vision.py
executor-python/nova_executor/alerts/: __init__.py
executor-python/nova_executor/audit/: __init__.py  audit_event_types.py  audit_logger.py
executor-python/nova_executor/health/: __init__.py  checker.py
executor-python/nova_executor/hil/: __init__.py  checkpoint_service.py  processor.py  ticket_service.py
executor-python/nova_executor/logging/: __init__.py  (+1 more)
executor-python/scripts/: release-gate.ps1  release-gate.sh  security_scan.py
executor-python/tests/: __init__.py  conftest.py  test_adapters.py  test_app.py  test_audit.py  test_checkpoint_service.py  test_config.py  test_config_checker.py  test_events.py  test_graph.py  test_harness.py  test_health.py  test_hil_processor.py  test_hil_service.py  test_logging.py  test_metrics.py  test_nodes.py  test_queue.py  test_rbac.py  test_routing.py  test_sandbox.py  test_security.py  test_security_report.py  test_streaming.py  test_tenant_isolation.py  test_tracing.py  test_types.py
(+180 files in other folders)
